--- a/intranet/htdocs/intranet-tmpl/informacion/error.tmpl
+++ b/intranet/htdocs/intranet-tmpl/informacion/error.tmpl
@@ -1,3 +1,3 @@
 <div class="alert alert-error">
-        <strong>Oh snap!</strong> [% message_error %]
+        <strong>[% 'Qu&eacute; desastre!!!!!' | i18n %]</strong> [% message_error %]
 </div>
