--- a/intranet/htdocs/intranet-tmpl/main.tmpl
+++ b/intranet/htdocs/intranet-tmpl/main.tmpl
@@ -59,7 +59,7 @@ var jobID = 0;
             warning: 10,
             counterElement: 'p',
             cssExceeded: 'label label-important',
-            counterText: "[% 'Caraceteres restantes' | i18n %]: ",    
+            counterText: "[% 'Caracteres restantes' | i18n %]: ",    
         });        
         
       });
