mensaje automatico generado para el sql.rev289

--- a/intranet/htdocs/intranet-tmpl/admin/global/preferenciasResults.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/preferenciasResults.tmpl
@@ -32,7 +32,7 @@
 
 <form id="formPreferencias" onclick="return false;" class="form-horizontal" action="[% url_prefix %]/admin/global/preferencias.pl?token=[% token %]" method="post">
     <fieldset class="resultados_busqueda">
-    <legend>[% "Administraci&oacute;n de preferencias de Circulaci&oacute;n" | i18n %]</legend>
+    <legend>[% "Administraci&oacute;n de preferencias de sistema" | i18n %]</legend>
 
     
             [% FOREACH preferencia IN preferencias %]
