--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -397,7 +397,7 @@
                                                                                 [% IF show_analiticas > 0 %]
                                                                                     {title => "Ver anal&iacute;ticas", action=>"verAnaliticas([% id2 %])", icon=>"icon-edit"},
                                                                                 [% END %]
-                                                                                	{title => "Agregar portada", action=>"showAddPortadaEdicion([% id2 %], [% id1 %])",icon=>"icon-picture"},
+                                                                                	{title => "Portadas de libro", action=>"showAddPortadaEdicion([% id2 %], [% id1 %])",icon=>"icon-picture"},
 		                                                                            ],
 		
 		                            ) ;
