--- a/intranet/htdocs/intranet-tmpl/admin/global/circResultConfig.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/circResultConfig.tmpl
@@ -30,6 +30,8 @@
 
 </script>
 
+[% INCLUDE 'editorHTML.inc' %]
+
 <form id="formPreferencias" onclick="return false;" class="form-horizontal" action="[% url_prefix %]/admin/global/circ_config.pl?token=[% token %]" method="post">
     <fieldset class="resultados_busqueda">
     <legend>[% "Administraci&oacute;n de preferencias de Circulaci&oacute;n" | i18n %]</legend>
