--- a/intranet/htdocs/intranet-tmpl/admin/global/preferenciasResults.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/preferenciasResults.tmpl
@@ -31,24 +31,7 @@
 
 </script>
 
-
-<link href="/includes/css/aloha.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="/includes/require.js"></script>
-<script type="text/javascript" src="/includes/aloha/aloha.js"
-                     data-aloha-plugins="common/ui,
-                                          common/format,
-                                          common/list,
-                                          common/link,
-                                          common/highlighteditables">
-</script>
- 
-<script type="text/javascript">
-       Aloha.ready( function() {
-              var $ = Aloha.jQuery;
-              $('.editable_wysiwyg').aloha();
-       });
-</script>    
-
+[% INCLUDE 'editorHTML.inc' %]
 
 <form id="formPreferencias" onclick="return false;" class="form-horizontal" action="[% url_prefix %]/admin/global/preferencias.pl?token=[% token %]" method="post">
     <fieldset class="resultados_busqueda">
