fix en feriados template

--- a/intranet/htdocs/intranet-tmpl/admin/feriados.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/feriados.tmpl
@@ -217,6 +217,8 @@
 <fieldset>
     <legend class="titulos">[% "Feriados" | i18n %]</legend>
 
+    <div id="proximosFeriados"></div><br />
+
     <div id="calendarioFeriados"></div><br />
 
     <form class="well form-inline" onclick="return false;">
@@ -228,8 +230,6 @@
         <button type="submit" id="mostrarFeriadosTotales" class="btn btn-info" style="display:none;">
             <i id="mostrarFeriadosTotalesIcon" class="icon-white icon-eye-open"></i> [% 'Mostrar feriados originales' | i18n %]</button>
     </form>
-
-    <div id="proximosFeriados"></div>
 
 </fieldset>
 
