importar/exportar visualizaciones OPAC e INTRA

--- a/intranet/htdocs/intranet-tmpl/admin/feriados.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/feriados.tmpl
@@ -54,9 +54,7 @@
         }
     }
 
-    //FIXME: feo!!
     function updateEliminarFeriado(responseText){
-        // location.reload();
         updateAgregarFeriado(responseText);
     }
 
@@ -215,7 +213,7 @@
 </script>
 
 <fieldset>
-    <legend class="titulos">[% "Feriados" | i18n %]</legend>
+    <legend class="titulos">[% "Pr&oacute;ximos Feriados" | i18n %]</legend>
 
     <div id="proximosFeriados"></div><br />
 
