--- a/intranet/htdocs/intranet-tmpl/reports/catalogo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/catalogo.tmpl
@@ -17,7 +17,8 @@
                                  content   => [ 
                                                 {id => 'labels', text => "[% 'Generaci&oacute;n de Etiquetas' | i18n %]"},
                                                 {id => 'unindexed', text => "[% 'Registros no indexados' | i18n %]"},
-                                                {id => 'colecciones', text => "[% 'Reporte de colecciones' | i18n %]"},
+                                                {id => 'colecciones', text => "[% 'Colecciones' | i18n %]"},
+                                           
                                               ],
                                  content_id=> 'reportes_catalogo',
                                  active_id => 'labels',
@@ -25,7 +26,7 @@
     );
 
 [% END %]
-
+     <!--  {id => 'disponibilidad', text => "[% 'Disponibilidad de Ejemplares' | i18n %]"}, -->
          <div class="tab-pane fade in active" id="labels">
             [% INCLUDE 'partials/reportes/_reporte_gen_etiquetas.inc' %]
         </div>
@@ -34,6 +35,9 @@
         </div>
         <div class="tab-pane fade " id="colecciones">
             [% INCLUDE 'partials/reportes/_reporte_colecciones.inc' %]
+        </div>
+          <div class="tab-pane fade " id="disponibilidad">
+            [% INCLUDE 'partials/reportes/_reporte_disponibilidad.inc' %]
         </div>
 
         <div class="tab-pane fade " id="busquedas">
